Completed first pass through lint. Cleaned up poetry, letters, some styling.

--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="Kipps, by H. G. Wells" src="../images/titlepage.svg"/>
+			<img alt="KIPPS, BY H. G. WELLS" src="../images/titlepage.svg"/>
 		</section>
 	</body>
 </html>
