--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,77 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <span epub:type="subtitle">CHAPTERTITLE</span></a>
+					<a href="text/epigraph.xhtml">Epigraph</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml">Kipps</a>
+					<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span>: The Making of Kipps</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1-1.xhtml"><span epub:type="z3998:roman">I</span>: The Little Shop at New Romney</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-2.xhtml"><span epub:type="z3998:roman">II</span>: The Emporium</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-3.xhtml"><span epub:type="z3998:roman">III</span>: The Wood-Carving Class</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-4.xhtml"><span epub:type="z3998:roman">IV</span>: Chitterlow</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-5.xhtml"><span epub:type="z3998:roman">V</span>: Swapped</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Unexpected</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span>: <abbr>Mr.</abbr> Coote, the Chaperon</a>
+					<ol>
+						<li>
+							<a href="text/chapter-2-1.xhtml"><span epub:type="z3998:roman">I</span>: The New Conditions</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-2.xhtml"><span epub:type="z3998:roman">II</span>: The Walshinghams</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-3.xhtml"><span epub:type="z3998:roman">III</span>: Engaged</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Bicycle Manufacturer</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-5.xhtml"><span epub:type="z3998:roman">V</span>: The Pupil Lover</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-6.xhtml"><span epub:type="z3998:roman">VI</span>: Discords</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-7.xhtml"><span epub:type="z3998:roman">VII</span>: London</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Kipps Enters Society</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Labyrinthodon</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span>: Kippses</a>
+					<ol>
+						<li>
+							<a href="text/chapter-3-1.xhtml"><span epub:type="z3998:roman">I</span>: The Housing Problem</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-2.xhtml"><span epub:type="z3998:roman">II</span>: The Callers</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-3.xhtml"><span epub:type="z3998:roman">III</span>: Terminations</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +104,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORKTITLE</a>
+					<a href="text/book-1.xhtml" epub:type="bodymatter z3998:fiction">Scaramouche</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
