Include CSS for formatting calling cards and added appropriate HTML. Re-ran some tools after pulling latest version.

--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter z3998:fiction">
 		<section id="epigraph" epub:type="epigraph">
-			<p>"Those individuals who have lead secluded or isolated lives, or have hitherto moved in other spheres than those wherein well-bred people move, will gather all the information necessary from these pages to render them thoroughly conversant with the manners and amenities of society."</p>
+			<p>“Those individuals who have lead secluded or isolated lives, or have hitherto moved in other spheres than those wherein well-bred people move, will gather all the information necessary from these pages to render them thoroughly conversant with the manners and amenities of society.”</p>
 			<cite><i epub:type="se:name.publication.book">Manners and Rules of Good Society</i>
 			</cite>
 			<footer>
