--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,7 +17,7 @@
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCERLINK">PRODUCER</a>,<br/>
+			<a href="http://chrisbrooks.org">Chris Brooks</a>,<br/>
 			and is based on a transcription produced in 2012 by<br/>
 			<span class="name">Charlene Taylor</span>, <span class="name">Martin Pettit</span>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
