--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -27,7 +27,7 @@
 							<a href="text/chapter-1-2.xhtml"><span epub:type="z3998:roman">II</span>: The Emporium</a>
 						</li>
 						<li>
-							<a href="text/chapter-1-3.xhtml"><span epub:type="z3998:roman">III</span>: The Wood-Carving Class</a>
+							<a href="text/chapter-1-3.xhtml"><span epub:type="z3998:roman">III</span>: The Woodcarving Class</a>
 						</li>
 						<li>
 							<a href="text/chapter-1-4.xhtml"><span epub:type="z3998:roman">IV</span>: Chitterlow</a>
