Cleaned up ordering of spine, TOC, manifest.

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -104,7 +104,13 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/book-1.xhtml" epub:type="bodymatter z3998:fiction">Scaramouche</a>
+					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">Epigraph</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
+					<a href="text/book-1.xhtml" epub:type="bodymatter z3998:fiction">Kipps</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
