--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Kipps</i><br/>
-			was published in YEAR by<br/>
+			was published in 1905 by<br/>
 			<a href="https://en.wikipedia.org/wiki/H._G._Wells">H. G. Wells</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
@@ -23,11 +23,11 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/39162">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="IALINK">Internet Archive</a>.</p>
+			<a href="https://catalog.hathitrust.org/Record/008973827">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
+			<i epub:type="se:name.visual-art.painting">TODO a painting</i>,<br/>
 			a painting completed in YEAR by<br/>
-			<a href="ARTISTWIKILINK">ARTIST</a>.<br/>
+			<a href="https://en.wikipedia.org/wiki/Ernest_William_Haslehust">TODO artist</a>.<br/>
 			The cover and title pages feature the<br/>
 			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
 			typefaces created in 2014 and 2009 by<br/>
