--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,9 +25,9 @@
 			and on digital scans available at the<br/>
 			<a href="https://catalog.hathitrust.org/Record/008973827">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">TODO a painting</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="https://en.wikipedia.org/wiki/Ernest_William_Haslehust">TODO artist</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Reconciliation</i>,<br/>
+			a painting completed in 1887 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Tom_Roberts">Tom Roberts</a>.<br/>
 			The cover and title pages feature the<br/>
 			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
 			typefaces created in 2014 and 2009 by<br/>
