--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,7 +13,7 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">Kipps</i><br/>
 			was published in 1905 by<br/>
-			<a href="https://en.wikipedia.org/wiki/H._G._Wells">H. G. Wells</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/H._G._Wells"><abbr class="name">H. G.</abbr> Wells</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
