--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -8,7 +8,7 @@
 			<h2 epub:type="title">Table of Contents</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml">Title Page</a>
+					<a href="text/titlepage.xhtml">Titlepage</a>
 				</li>
 				<li>
 					<a href="text/imprint.xhtml">Imprint</a>
@@ -18,73 +18,75 @@
 				</li>
 				<li>
 					<a href="text/halftitle.xhtml">Kipps</a>
-				</li>
-				<li>
-					<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span>: The Making of Kipps</a>
 					<ol>
 						<li>
-							<a href="text/chapter-1-1.xhtml"><span epub:type="z3998:roman">I</span>: The Little Shop at New Romney</a>
+							<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-1-1.xhtml"><span epub:type="z3998:roman">I</span>: The Little Shop at New Romney</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-2.xhtml"><span epub:type="z3998:roman">II</span>: The Emporium</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-3.xhtml"><span epub:type="z3998:roman">III</span>: The Woodcarving Class</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-4.xhtml"><span epub:type="z3998:roman">IV</span>: Chitterlow</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-5.xhtml"><span epub:type="z3998:roman">V</span>: Swapped</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Unexpected</a>
+								</li>
+							</ol>
 						</li>
 						<li>
-							<a href="text/chapter-1-2.xhtml"><span epub:type="z3998:roman">II</span>: The Emporium</a>
+							<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-2-1.xhtml"><span epub:type="z3998:roman">I</span>: The New Conditions</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-2.xhtml"><span epub:type="z3998:roman">II</span>: The Walshinghams</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-3.xhtml"><span epub:type="z3998:roman">III</span>: Engaged</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Bicycle Manufacturer</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-5.xhtml"><span epub:type="z3998:roman">V</span>: The Pupil Lover</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-6.xhtml"><span epub:type="z3998:roman">VI</span>: Discords</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-7.xhtml"><span epub:type="z3998:roman">VII</span>: London</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Kipps Enters Society</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Labyrinthodon</a>
+								</li>
+							</ol>
 						</li>
 						<li>
-							<a href="text/chapter-1-3.xhtml"><span epub:type="z3998:roman">III</span>: The Woodcarving Class</a>
-						</li>
-						<li>
-							<a href="text/chapter-1-4.xhtml"><span epub:type="z3998:roman">IV</span>: Chitterlow</a>
-						</li>
-						<li>
-							<a href="text/chapter-1-5.xhtml"><span epub:type="z3998:roman">V</span>: Swapped</a>
-						</li>
-						<li>
-							<a href="text/chapter-1-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Unexpected</a>
-						</li>
-					</ol>
-				</li>
-				<li>
-					<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span>: <abbr>Mr.</abbr> Coote, the Chaperon</a>
-					<ol>
-						<li>
-							<a href="text/chapter-2-1.xhtml"><span epub:type="z3998:roman">I</span>: The New Conditions</a>
-						</li>
-						<li>
-							<a href="text/chapter-2-2.xhtml"><span epub:type="z3998:roman">II</span>: The Walshinghams</a>
-						</li>
-						<li>
-							<a href="text/chapter-2-3.xhtml"><span epub:type="z3998:roman">III</span>: Engaged</a>
-						</li>
-						<li>
-							<a href="text/chapter-2-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Bicycle Manufacturer</a>
-						</li>
-						<li>
-							<a href="text/chapter-2-5.xhtml"><span epub:type="z3998:roman">V</span>: The Pupil Lover</a>
-						</li>
-						<li>
-							<a href="text/chapter-2-6.xhtml"><span epub:type="z3998:roman">VI</span>: Discords</a>
-						</li>
-						<li>
-							<a href="text/chapter-2-7.xhtml"><span epub:type="z3998:roman">VII</span>: London</a>
-						</li>
-						<li>
-							<a href="text/chapter-2-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Kipps Enters Society</a>
-						</li>
-						<li>
-							<a href="text/chapter-2-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Labyrinthodon</a>
-						</li>
-					</ol>
-				</li>
-				<li>
-					<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span>: Kippses</a>
-					<ol>
-						<li>
-							<a href="text/chapter-3-1.xhtml"><span epub:type="z3998:roman">I</span>: The Housing Problem</a>
-						</li>
-						<li>
-							<a href="text/chapter-3-2.xhtml"><span epub:type="z3998:roman">II</span>: The Callers</a>
-						</li>
-						<li>
-							<a href="text/chapter-3-3.xhtml"><span epub:type="z3998:roman">III</span>: Terminations</a>
+							<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-3-1.xhtml"><span epub:type="z3998:roman">I</span>: The Housing Problem</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-2.xhtml"><span epub:type="z3998:roman">II</span>: The Callers</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-3.xhtml"><span epub:type="z3998:roman">III</span>: Terminations</a>
+								</li>
+							</ol>
 						</li>
 					</ol>
 				</li>
@@ -100,7 +102,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Title Page</a>
+					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
 				</li>
 				<li>
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
