--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/halftitle.xhtml">Kipps</a>
 					<ol>
 						<li>
-							<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span></a>
+							<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span>: The Making of Kipps</a>
 							<ol>
 								<li>
 									<a href="text/chapter-1-1.xhtml"><span epub:type="z3998:roman">I</span>: The Little Shop at New Romney</a>
@@ -43,7 +43,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span></a>
+							<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span>: <abbr>Mr.</abbr> Coote, the Chaperon</a>
 							<ol>
 								<li>
 									<a href="text/chapter-2-1.xhtml"><span epub:type="z3998:roman">I</span>: The New Conditions</a>
@@ -75,7 +75,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span></a>
+							<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span>: Kippses</a>
 							<ol>
 								<li>
 									<a href="text/chapter-3-1.xhtml"><span epub:type="z3998:roman">I</span>: The Housing Problem</a>
