--- a/src/epub/text/halftitle.xhtml
+++ b/src/epub/text/halftitle.xhtml
@@ -7,10 +7,10 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="halftitlepage" epub:type="halftitlepage">
-			<h1 epub:type="fulltitle">
-				<span epub:type="title">Kipps</span>
-				<span epub:type="subtitle">The Story of a Simple Soul</span>
-			</h1>
+			<hgroup epub:type="fulltitle">
+				<h1 epub:type="title">Kipps</h1>
+				<h2 epub:type="subtitle">The Story of a Simple Soul</h2>
+			</hgroup>
 		</section>
 	</body>
 </html>
