Replace .signature class with z3998:signature epub:type

--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -14,7 +14,7 @@
 				</cite>
 			</blockquote>
 			<footer>
-				<p class="signature">By a Member of the Aristocracy</p>
+				<p epub:type="z3998:signature">By a Member of the Aristocracy</p>
 			</footer>
 		</section>
 	</body>
