--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -10,12 +10,9 @@
 			<blockquote>
 				<p>“Those individuals who have lead secluded or isolated lives, or have hitherto moved in other spheres than those wherein well-bred people move, will gather all the information necessary from these pages to render them thoroughly conversant with the manners and amenities of society.”</p>
 				<cite>
-					<i epub:type="se:name.publication.book">Manners and Rules of Good Society</i>
+					<i epub:type="se:name.publication.book">Manners and Rules of Good Society</i>, by a Member of the Aristocracy
 				</cite>
 			</blockquote>
-			<footer>
-				<p epub:type="z3998:signature">By a Member of the Aristocracy</p>
-			</footer>
 		</section>
 	</body>
 </html>
