--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -9,9 +9,7 @@
 		<section id="epigraph" epub:type="epigraph">
 			<blockquote>
 				<p>“Those individuals who have lead secluded or isolated lives, or have hitherto moved in other spheres than those wherein well-bred people move, will gather all the information necessary from these pages to render them thoroughly conversant with the manners and amenities of society.”</p>
-				<cite>
-					<i epub:type="se:name.publication.book">Manners and Rules of Good Society</i>, by a Member of the Aristocracy
-				</cite>
+				<cite><i epub:type="se:name.publication.book">Manners and Rules of Good Society</i>, by a Member of the Aristocracy</cite>
 			</blockquote>
 		</section>
 	</body>
