Rename halftitle.xhtml -> halftitlepage.xhtml

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/epigraph.xhtml">Epigraph</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">Kipps</a>
+					<a href="text/halftitlepage.xhtml">Kipps</a>
 					<ol>
 						<li>
 							<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span>: The Making of Kipps</a>
@@ -111,7 +111,7 @@
 					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">Epigraph</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/book-1.xhtml" epub:type="bodymatter z3998:fiction">Kipps</a>
