--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">Kipps</i><br/>
 			was published in 1905 by<br/>
 			<a href="https://en.wikipedia.org/wiki/H._G._Wells"><abbr class="name">H. G.</abbr> Wells</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://chrisbrooks.org">Chris Brooks</a>,<br/>
 			and is based on a transcription produced in 2012 by<br/>
