--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,13 +13,13 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">Kipps</i><br/>
 			was published in 1905 by<br/>
-			<a href="https://en.wikipedia.org/wiki/H._G._Wells"><abbr class="name">H. G.</abbr> Wells</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/H._G._Wells"><abbr epub:type="z3998:given-name">H. G.</abbr> Wells</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://chrisbrooks.org">Chris Brooks</a>,<br/>
 			and is based on a transcription produced in 2012 by<br/>
-			<b class="name">Charlene Taylor</b>, <b class="name">Martin Pettit</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Charlene Taylor</b>, <b epub:type="z3998:personal-name">Martin Pettit</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/39162">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
