Update <hgroup> children after first <h#> to <p>, ref. new HTML standard

--- a/src/epub/text/halftitlepage.xhtml
+++ b/src/epub/text/halftitlepage.xhtml
@@ -9,7 +9,7 @@
 		<section id="halftitlepage" epub:type="halftitlepage">
 			<hgroup epub:type="fulltitle">
 				<h2 epub:type="title">Kipps</h2>
-				<h3 epub:type="subtitle">The Story of a Simple Soul</h3>
+				<p epub:type="subtitle">The Story of a Simple Soul</p>
 			</hgroup>
 		</section>
 	</body>
