--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -12,7 +12,7 @@
 					<span epub:type="label">Book</span>
 					<span epub:type="ordinal z3998:roman">I</span>
 				</h2>
-				<h3 epub:type="title">The Making of Kipps</h3>
+				<p epub:type="title">The Making of Kipps</p>
 			</hgroup>
 		</section>
 	</body>
