--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -12,7 +12,7 @@
 					<span epub:type="label">Book</span>
 					<span epub:type="ordinal z3998:roman">II</span>
 				</h2>
-				<h3 epub:type="title"><abbr>Mr.</abbr> Coote, the Chaperon</h3>
+				<p epub:type="title"><abbr>Mr.</abbr> Coote, the Chaperon</p>
 			</hgroup>
 		</section>
 	</body>
