--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://chrisbrooks.org">Chris Brooks</a>,<br/>
 			and is based on a transcription produced in 2012 by<br/>
-			<b epub:type="z3998:personal-name">Charlene Taylor</b>, <b epub:type="z3998:personal-name">Martin Pettit</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Charlene Taylor</b>, <b epub:type="z3998:personal-name">Martin Pettit</b>, and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/39162">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
