--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -15,11 +15,11 @@
 			was published in 1905 by<br/>
 			<a href="https://en.wikipedia.org/wiki/H._G._Wells"><abbr epub:type="z3998:given-name">H. G.</abbr> Wells</a>.</p>
 			<p>This ebook was produced for<br/>
-			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
+			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://chrisbrooks.org">Chris Brooks</a>,<br/>
+			<a href="https://chrisbrooks.org/">Chris Brooks</a>,<br/>
 			and is based on a transcription produced in 2012 by<br/>
-			<b epub:type="z3998:personal-name">Charlene Taylor</b>, <b epub:type="z3998:personal-name">Martin Pettit</b>, and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
+			<b epub:type="z3998:personal-name">Charlene Taylor</b>, <b epub:type="z3998:personal-name">Martin Pettit</b>, and <a href="https://www.pgdp.net/">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/39162">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
@@ -31,12 +31,12 @@
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
-			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
+			<a href="https://www.theleagueofmoveabletype.com/">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
 			<b>July 25, 2018, 7:56 <abbr class="eoc">p.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/h-g-wells/kipps">standardebooks.org/ebooks/h-g-wells/kipps</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org/">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
